--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,15 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/ACT_Collector.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.AbsoluteLayout.jar=C:\\Users\\Administrator\\Desktop\\AbsoluteLayout.jar
-file.reference.AbsoluteLayout.jar-1=G:\\Workplace\\AbsoluteLayout.jar
-file.reference.mysql-connector-java-5.1.40-bin.jar=G:\\Workplace\\mysql-connector-java-5.1.40-bin.jar
+file.reference.AbsoluteLayout.jar=lib\\AbsoluteLayout.jar
+file.reference.swing-layout-1.0.3.jar=lib\\swing-layout-1.0.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.AbsoluteLayout.jar-1}
+    ${file.reference.swing-layout-1.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
